Rename package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NLW6Valoriza",
+  "name": "nlw-6-valoriza",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/Snahier/NLW6Valoriza.git",
