--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Snahier <hansalmeida@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "typeorm": "ts-node-dev .node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
